--- a/index.html
+++ b/index.html
@@ -1,49 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head >
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Contact Form</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
 </head>
-<body style="background-color: black;">
-    <div class="main-container">
-    <h1 >Contact Form</h1>
-    <div style="display: flex">
-    <div class ="div-container">
-        <div class="logo-style-apply" >
-        <i class="fa-solid fa-location-dot"></i>
+<body>
+    <div class="container common-size" >
+        <h2> Contact Form </h2>
+        <div class="contact-info common-size" >
+            <div class="info">
+                <div class="logo">
+                    <i class="fa-solid fa-location-dot"></i>
+                </div>
+                <div class="text-info">
+                    <h4> Address </h4>
+                    <p>2nd Peerkhan St, Nagpada, Mumbai, Maharashtra 400008</p>
+                </div>
+            </div>
+            <div class="info">
+                <div class="logo">
+                    <i class="fa-solid fa-phone"></i>
+                </div>
+                <div class="text-info">
+                    <h4> Phone </h4>
+                    <p> <a href="tel:+9109987056292"> +91 099870 56292 </a></p>
+                </div>
+            </div>
+            <div class="info">
+                <div class="logo">
+                    <i class="fa-brands fa-chrome"></i>
+                </div>
+                <div class="text-info">
+                    <h4> Site </h4>
+                    <p> <a href="https://heuristicacademy.in/">https://heuristicacademy.in/</a> </p>
+                </div>
+            </div>
         </div>
-        <h6>Address:</h6>
-        <p>187 West 21th street, suite 721 New york ny 10016</p>
-        
-    </div>
-    <div class ="div-container">
-        <div class="logo-style-apply">
-        <i class="fa-solid fa-phone"></i>
+        <div class="form-page">
+            <h2 class="get-in-touch"> get in touch with us </h2>
+            <form class="contact-form">
+                <input name="Name" id="name" placeholder="Name" type="text" class="inputs form-elements-size" required>
+                <span class="warning-text" id="invalid-name"></span>
+                <input name="Email" id="email" placeholder="Email" type="email" class="inputs form-elements-size" onclick="return validate()" required>
+                <span class="warning-text" id="invalid-email"></span>
+                <input name="Password" id="password" placeholder="Password" type="password" class="inputs form-elements-size" onclick="return validate()" required>
+                <span class="warning-text" id="invalid-pw"></span>
+                <input name="ConfirmPassword" id="confirmpassword" placeholder="Confirm Password" type="password" class="inputs form-elements-size" onclick="return validate()" required>
+                <span class="warning-text" id="invalid-pw2"></span>
+                <input name="PhoneNumber" id="phonenumber" placeholder="Contact Number" type="number" class="inputs form-elements-size" onclick="return validate()" required>
+                <span class="warning-text" id="invalid-number"></span>
+                <input name="Subject" id="subject" placeholder="Subject" type="text" class="inputs form-elements-size" onclick="return validate()" required>
+                <textarea name="Message" id="message" placeholder="Message" type="text" class="form-elements-size" required></textarea>
+                <input type="submit" class="send-button form-elements-size" value="send message" onclick="return validate()">
+            </form>
         </div>
-        <h6>Phone:</h6>
-        <p>+91 6543564789</p>
     </div>
-    <div class ="div-container">
-        <div class="logo-style-apply">
-        <i class="fa-solid fa-paper-plane"></i>
-        </div>
-        <h6>Email</h6>
-        <p>info@gmail.com</p>
-    </div>
-    </div>
-    <br>
-    <h1>Get in touch with us</h1>
-    <br>
-    <form action="submit.html">
-        <input type="text" value="" placeholder="Name" ><br><br>
-        <input type="email" value="" placeholder="Email"><br><br>
-        <input type="text" value="" placeholder="Subject"><br><br>
-        <textarea name="message" cols="50" rows="12" placeholder="Message" class="textarea-apply"></textarea><br><br>
-    </form>
-    <button>SEND MESSAGE</button>
-    </div>
+    <script src="script.js"></script>
 </body>
 </html>
